Select result tables

--- a/frontend/projects/analysis/src/lib/results/results-table/results-table.component.html
+++ b/frontend/projects/analysis/src/lib/results/results-table/results-table.component.html
@@ -1,4 +1,4 @@
-<lib-table-overlay [loading]="false" [dataSource]="dataSource" [noDataLabel]="'No Results.'"
+<lib-table-overlay [id]="'results'" [loading]="false" [dataSource]="dataSource" [noDataLabel]="'No Results.'"
                    class="mat-table-body-bg">
 <table mat-table [dataSource]="dataSource" class="mat-table-body-bg" matSort matSortActive="startDate"
        matSortDirection="desc">
